# ScreenshotClipboardTool

./: .gitignore  DESIGN.md  IntegratedTool.spec  README.md  build_linux.sh  build_macos.sh  build_windows.ps1  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: architecture-android-sync.md  architecture-macos-adaptation.md  class-diagram-android-sync.mermaid  class-diagram.mermaid  prd-android-sync.md  prd-macos-adaptation.md  sequence-diagram-android-sync.mermaid  sequence-diagram.mermaid
relay_server/: Dockerfile  __init__.py  auth.py  config.py  device_registry.py  requirements.txt  server.py  signaling.py  turn_relay.py
src/: clipboard_viewer.py  linux_adapter.py  macos_adapter.py  platform_adapter.py  windows_adapter.py
src/integrated_tool/: app.py
src/screenshot_tool/: __init__.py  app.py  assets.py  clipboard.py  config.py  history.py  hotkeys.py  image_ops.py  startup.py  tray.py  window_detect.py
src/sync/: __init__.py  auth.py  device_manager.py  mdns_advertiser.py  pairing_server.py  protocol.py  sync_manager_v2.py  websocket_client.py  websocket_server.py
tests/: test_linux_adaptation.py  test_macos_adaptation.py  test_sync_module.py
(+50 files in other folders)
