[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-capture-clipboard"
version = "0.1.0"
description = "Integrated Windows/macOS screenshot, annotation, pin, clipboard history, and sync tool."
requires-python = ">=3.9"
dependencies = ["Pillow>=10.0", "pystray>=0.19.0"]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Cocoa>=9.0",
    "pyobjc-framework-Quartz>=9.0",
    "pynput>=1.7.0",
]
linux = [
    "pynput>=1.7.0",
    "python-xlib>=0.33",
]

[project.scripts]
integrated-tool = "integrated_tool.app:main"

[tool.setuptools.packages.find]
where = ["src"]
